kubernetes-deployment/cluster-deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sock-shop-ingress
  namespace: sock-shop-1
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing  # Public access
    alb.ingress.kubernetes.io/target-type: ip  # Direct traffic to pods
spec:
  ingressClassName: alb  # Use this instead of the deprecated annotation
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end   # Name of the service
                port:
                  number: 80       # Port exposed by the service
